# agent

./: .gitignore  README.md  pyproject.toml
repopilot/: __init__.py  bootstrap.py  cli.py  output.py  repl.py  runner.py
repopilot/agent/: __init__.py  loop.py  messages.py  sub_agent.py
repopilot/config/: __init__.py  settings.py
repopilot/context/: __init__.py  cache.py  compressor.py  manager.py  token_counter.py
repopilot/memory/: __init__.py  evolution.py  indexer.py  store.py  types.py
repopilot/permissions/: __init__.py  checker.py  rules.py  sandbox.py  security.py
repopilot/skills/: __init__.py  loader.py  router.py  skill_tool.py
repopilot/tools/: __init__.py  agent_tool.py  base.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  read_file.py  registry.py  write_file.py
skills/explain/: SKILL.md
skills/init/: SKILL.md
skills/review/: SKILL.md
tests/: test_context.py  test_memory.py  test_permissions.py  test_tools.py
