[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repopilot"
version = "0.1.0"
description = "AI Coding Agent inspired by Claude Code architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Shuo Ma"}]
dependencies = [
    "anthropic>=0.42",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.0",
    "prompt-toolkit>=3.0.50",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
repopilot = "repopilot.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["repopilot*"]
